--- a/SalesPersonAllocatorTest/SalesPersonAllocatorTest.csproj
+++ b/SalesPersonAllocatorTest/SalesPersonAllocatorTest.csproj
@@ -7,10 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.1.0" />
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="TestStack.BDDfy" Version="4.3.2" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SalesPersonAllocator\SalesPersonAllocator.csproj" />
   </ItemGroup>
 
 </Project>
