--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ install:
   - nuget restore SalesPersonAllocator.sln
   - nuget install xunit.runners -Version 1.9.2 -OutputDirectory testrunner
 script:
-  - msbuild /p:Configuration=Release solution-name.sln
+  - msbuild /p:Configuration=Release SalesPersonAllocator.sln
   - mono ./testrunner/xunit.runners.1.9.2/tools/xunit.console.clr4.exe ./SalesPersonAllocator.Tests/bin/Release/netcoreapp3.1/SalesPersonAllocator.Tests.dll
