--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,7 @@
 language: csharp
-solution: SalesPersonAllocator.sln
+dist: trusty
+mono: none
+dotnet: 3.1.10
+script:
+  - dotnet restore
+  - dotnet build
