--- a/SalesPersonAllocator/ClientApp/package.json
+++ b/SalesPersonAllocator/ClientApp/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "formik": "^2.2.6",
+    "grommet": "^2.16.2",
     "jquery": "^3.4.1",
     "merge": "^1.2.1",
     "oidc-client": "^1.9.0",
@@ -12,8 +14,10 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
+    "react-select": "^4.0.2",
     "reactstrap": "^8.4.1",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "ajv": "^6.9.1",
