--- a/SalesPersonAllocator/ClientApp/package.json
+++ b/SalesPersonAllocator/ClientApp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "focus-trap-react": "^8.4.1",
     "formik": "^2.2.6",
     "grommet": "^2.16.2",
     "jquery": "^3.4.1",
@@ -15,6 +16,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "react-select": "^4.0.2",
+    "reactjs-popup": "^2.0.4",
     "reactstrap": "^8.4.1",
     "rimraf": "^2.6.2",
     "styled-components": "^5.2.1"
