Refactor Projects to separate controllers and business rules

--- a/SalesPersonAllocator.Tests/SalesPersonAllocator.Tests.csproj
+++ b/SalesPersonAllocator.Tests/SalesPersonAllocator.Tests.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SalesPersonAllocator\SalesPersonAllocator.csproj" />
+    <ProjectReference Include="..\DomainLogic\DomainLogic.csproj" />
   </ItemGroup>
 
 </Project>
